# tcui

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  PKGBUILD  README.md  config.toml  skills-lock.json
.github/workflows/: ci.yml  gitleaks.yml  release.yml
assets/: TCUI.md  default_agent.md  default_soul.md
assets/models/potion-base-8M/: LICENSE  MODEL_CARD.md
docs/: auth.md  ui-refactor-plan.md  ui-refactor-qna.md
docs/evidence/: task-7.md  task-9.md
evals/: smoke.sh
migrations/: 001_initial.sql  init.sql
npm/: install.js  package.json
packaging/: PKGBUILD
scripts/: install.sh  preflight.sh
skills/caveman/: SKILL.md
skills/exa/: SKILL.md
skills/firecrawl/: SKILL.md
skills/gnome/: SKILL.md
skills/memory/: SKILL.md
skills/obsidian/: SKILL.md
skills/remember/: SKILL.md
skills/remindme/: SKILL.md
skills/research/: SKILL.md
skills/save/: SKILL.md
skills/schedule/: SKILL.md
skills/tavily/: SKILL.md
skills/websearch/: SKILL.md
src/: app.rs  auth_command.rs  diagnostics.rs  export.rs  main.rs  notifications.rs  search.rs  skill_runtime.rs  theme.rs  updater.rs
src/app/: action.rs  artifacts.rs  connection.rs  connection_tests.rs  conversations.rs  export.rs  generated_file.rs  input.rs  input_events.rs  message.rs  popups.rs  providers.rs  runtime.rs  runtime_guard_tests.rs  settings.rs  tab.rs  terminal.rs  tests.rs  update.rs
src/auth_command/: adapters.rs  cli.rs  contracts.rs  debug.rs  errors.rs  flow.rs  input.rs  runner.rs  tests.rs
src/config/: app_config.rs  key_store.rs  mcp_config.rs  mod.rs  search.rs  soul.rs  tests.rs  tui.rs
src/config/key_store/: api_key.rs  credential.rs  credential_tests.rs  filesystem_tests.rs  format.rs  future_version_tests.rs  legacy_tests.rs  oauth.rs  oauth_api_tests.rs  oauth_concurrency_tests.rs  oauth_persistence_tests.rs  parent_security_tests.rs  path_security.rs  persistence.rs  rollback.rs  test_support.rs
src/event/: handler.rs  mod.rs
src/llm/: auth.rs  auth_tests.rs  chat.rs  chat_tests.rs  client.rs  codex_responses.rs  codex_responses_request_tests.rs  codex_responses_sse_tests.rs  codex_responses_transport_tests.rs  local.rs  mod.rs  model_fetcher.rs  openrouter_regression_tests.rs  provider.rs  tools.rs
src/llm/auth/: codex.rs  codex_baseline_tests.rs  codex_cli_tests.rs  codex_external_safety_tests.rs  codex_external_tests.rs  codex_native_device_tests.rs  codex_native_refresh_tests.rs  codex_native_revoke_tests.rs  codex_native_tests.rs  codex_test_support.rs  credential.rs  legacy.rs  oauth.rs  oauth_baseline_tests.rs  oauth_tests.rs  openrouter.rs  openrouter_tests.rs  policy.rs  reader.rs  resolver.rs  resolver_error_tests.rs  resolver_matrix_tests.rs  resolver_refresh_failure_tests.rs  resolver_singleflight_tests.rs  resolver_tests.rs  secret_hygiene_tests.rs
src/llm/auth/codex/: cli.rs  credential.rs  native.rs  status.rs
src/llm/auth/oauth/: browser.rs  callback.rs  callback_listener.rs  callback_transport.rs  cancellation.rs  device.rs  (+11 more)
src/llm/codex_responses/: request.rs  sse.rs  transport.rs
src/mcp/: client.rs  error.rs  mod.rs  registry.rs  transport.rs
src/memory/: activity.rs  config.rs  directive.rs  embedding.rs  host.rs  index.rs  markdown.rs  mcp_server.rs  mod.rs  paths.rs  recall.rs  store.rs  sync.rs  write.rs
src/memory/mcp_server/: tests.rs
src/obsidian/: mod.rs  safety.rs  vault.rs  watcher.rs
src/reminders/: mod.rs  parse.rs  store.rs  systemd.rs
src/skills/: builtins.rs  catalog.rs  frontmatter.rs  mentions.rs  mod.rs
src/storage/: chat_store.rs  crypto.rs  db.rs  mod.rs  paths.rs
src/tui/: components.rs  focus.rs  keybind_capture.rs  mod.rs  palette.rs  settings_panel.rs  shell.rs  status_bar.rs  status_bar_layout.rs  status_bar_tests.rs
src/ui/: app_tabs.rs  artifact_sidebar.rs  chat_tab.rs  help.md  launcher.rs  mod.rs  obsidian_tab.rs  session_list.rs  settings_tab.rs  sidebar.rs  status_bar.rs  tab_bar.rs  toast.rs  toast_tests.rs  top_bar.rs
src/ui/components/: chat_message.rs  collapsible.rs  diff_view.rs  image_block.rs  markdown.rs  markdown_model.rs  mod.rs  terminal_capabilities.rs
src/ui/modals/: artifact_viewer.rs  confirm_diff.rs  editor_popup.rs  export_dialog.rs  help.rs  list_popup.rs  mcp_config.rs  mod.rs  new_tab.rs  quit_confirm.rs  save_file.rs
src/ui/settings_tab/: focus.rs  general.rs  keybindings.rs  local.rs  mcp.rs  mod.rs  models.rs  providers.rs  state.rs  tests.rs  util.rs
src/updater/: platform.rs  version.rs
tests/: auth_cli.rs  oauth_live_qa.rs  secret_hygiene.rs
tests/auth_cli/: failures.rs  process.rs  support.rs
(+33 files in other folders)
