[package]
name = "tcui"
version = "0.6.0"
edition = "2021"
description = "ChatGPT-style terminal chat UI"
license = "MIT"

[features]
default = ["memory"]
memory = [
  "dep:model2vec-rs",
  "dep:sqlite-vec",
  "rmcp/server",
  "rmcp/transport-io",
  "rmcp/macros",
]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util"] }
tokio-util = "0.7"
futures = "0.3"
pulldown-cmark = "0.13"
ratatui-image = { version = "0.10", default-features = false, features = ["crossterm", "rustix"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
rmcp = { version = "1.8", default-features = false, features = ["client", "transport-child-process"] }
tui-logger = "0.18"
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
color-eyre = "0.6"
walkdir = "2"
base64 = "0.22"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.9"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
log = "0.4"
thiserror = "2"
model2vec-rs = { version = "0.2.1", optional = true, default-features = false, features = ["local-only", "onig"] }
sqlite-vec = { version = "=0.1.7", optional = true }

[profile.dev]
opt-level = 3

[package.metadata.deb]
maintainer = "TermChatUI maintainers"
copyright = "2026 TermChatUI maintainers"
section = "utils"
priority = "optional"
assets = [
  ["target/release/tcui", "usr/bin/tcui", "755"],
  ["README.md", "usr/share/doc/tcui/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/tcui", dest = "/usr/bin/tcui", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/tcui/README.md", mode = "644" },
]
